--- a/javascript/three.js/public/index.html
+++ b/javascript/three.js/public/index.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="/vendor/three.js/three.js"></script>
+		<script src="/vendor/three-js/three.js"></script>
 		<script>
 // Our Javascript will go here.
 		</script>
