--- a/javascript/three.js/public/admin.html
+++ b/javascript/three.js/public/admin.html
@@ -7,6 +7,6 @@
   <body>
     <div id="root"></div>
     <script src="/dist/commons.js"></script>
-    <script src="/dist/app.bundle.js"></script>
+    <script src="/dist/admin.bundle.js"></script>
   </body>
 </html>
