--- a/javascript/jquery/plugin/checkbox-toggle/example/index.html
+++ b/javascript/jquery/plugin/checkbox-toggle/example/index.html
@@ -10,7 +10,9 @@
     <input type="checkbox" value="0" name="sam" id="checkbox-sam" class="checkbox-toggle" data-checkbox-toggle="0,1"><label for="checkbox-sam">Sam</label>
     <input type="checkbox" value="0" name="joe" id="checkbox-joe" class="checkbox-toggle" data-checkbox-toggle="0,1" checked><label for="checkbox-joe">Joe</label>
     <hr>
-    <input type="checkbox" name="light" id="checkbox-joe" class="checkbox-toggle" data-checkbox-toggle="off,on" checked><label for="checkbox-joe">Light</label>
+    <input type="checkbox" name="light" id="checkbox-light" class="checkbox-toggle" data-checkbox-toggle="off,on" checked><label for="checkbox-light">Light</label>
+    <hr>
+    <input type="checkbox" name="normal" id="checkbox-normal" class="checkbox-toggle"><label for="checkbox-default">Default</label>
 
     <script type="text/javascript">
       $(function() {
