--- a/javascript/jquery/plugin/checkbox-toggle/example/index.html
+++ b/javascript/jquery/plugin/checkbox-toggle/example/index.html
@@ -12,7 +12,11 @@
     <hr>
     <input type="checkbox" name="light" id="checkbox-light" class="checkbox-toggle" data-checkbox-toggle="off,on" checked><label for="checkbox-light">Light</label>
     <hr>
-    <input type="checkbox" name="normal" id="checkbox-normal" class="checkbox-toggle"><label for="checkbox-default">Default</label>
+    <input type="checkbox" name="normal" id="checkbox-default-off" class="checkbox-toggle"><label for="checkbox-default-off">Default(off)</label>
+    <input type="checkbox" name="normal" id="checkbox-default-on" class="checkbox-toggle" checked><label for="checkbox-default-on">Default(on)</label>
+    <hr>
+    <input type="checkbox" name="normal" id="checkbox-hoge" class="checkbox-toggle" data-checkbox-toggle="hoge,fuga"><label for="checkbox-hoge">Hoge</label>
+    <input type="checkbox" name="normal" id="checkbox-fuga" class="checkbox-toggle" data-checkbox-toggle="hoge,fuga" checked><label for="checkbox-fuga">Fuga</label>
 
     <script type="text/javascript">
       $(function() {
